fixed overflow issues

--- a/pages/edit/edit.css
+++ b/pages/edit/edit.css
@@ -2,8 +2,11 @@
 
 body {
   width: 100vw;
-  height: 100vh;
+  max-height: 100vh;
   padding: 16px;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
 }
@@ -112,4 +115,5 @@ hr {
   max-width: 100vw;
   outline: none;
   height: 100%;
+  overflow-y: auto;
 }
