--- a/styles/home.css
+++ b/styles/home.css
@@ -121,6 +121,11 @@ main {
   width: 100%;
   height: 100%;
   background-color: #fdfdfd;
+  /* overflow: scroll; */
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  max-height: 100vh;
 }
 
 .preview hr {
@@ -154,6 +159,11 @@ main {
   line-height: 16px;
   font-size: 12px;
   font-weight: 300;
+}
+
+.preview-content {
+  overflow-y: auto;
+  height: 100%;
 }
 
 @media only screen and (max-width: 1068px) {
